First commit for mage-admin
Includes a dark theme (replacing cosmic), and an update to the readme.

--- a/src/app/@theme/layouts/one-column/one-column.layout.scss
+++ b/src/app/@theme/layouts/one-column/one-column.layout.scss
@@ -37,7 +37,7 @@
         width: $sidebar-width;
       }
 
-      @include nb-for-theme(cosmic) {
+      @include nb-for-theme(dark) {
         background: nb-theme(layout-bg);
       }
     }
