--- a/src/app/pages/dashboard/rooms/rooms.component.scss
+++ b/src/app/pages/dashboard/rooms/rooms.component.scss
@@ -9,7 +9,7 @@
     background: url('../../../../assets/images/square_pattern.svg') repeat;
     background-size: 75px;
 
-    @include nb-for-theme(cosmic) {
+    @include nb-for-theme(dark) {
       background-image: url('../../../../assets/images/square_pattern_cosmic.svg');
     }
   }
