--- a/src/app/@theme/components/theme-switcher/theme-switcher.component.scss
+++ b/src/app/@theme/components/theme-switcher/theme-switcher.component.scss
@@ -26,17 +26,17 @@
         padding-right: 10px;
       }
 
-      &.cosmic {
+      &.dark {
         color: nb-theme(color-fg);
         padding-left: 10px;
       }
 
-      @include nb-for-theme(cosmic) {
+      @include nb-for-theme(dark) {
         &.light {
           color: nb-theme(color-fg);
         }
 
-        &.cosmic {
+        &.dark {
           color: nb-theme(color-white);
         }
       }
@@ -83,14 +83,14 @@
 
       box-shadow: 0 0 0.25rem 0 rgba(nb-theme(color-fg), 0.4);
 
-      @include nb-for-theme(cosmic) {
+      @include nb-for-theme(dark) {
         @include btn-hero-primary-gradient();
       }
     }
   }
 
   @include media-breakpoint-down(is) {
-    .light, .cosmic {
+    .light, .dark {
       display: none;
     }
   }
