--- a/src/app/pages/dashboard/security-cameras/security-cameras.component.scss
+++ b/src/app/pages/dashboard/security-cameras/security-cameras.component.scss
@@ -123,14 +123,14 @@
     }
   }
 
-  @include nb-for-theme(cosmic) {
+  @include nb-for-theme(dark) {
     .cameras-filter a.active {
       color: nb-theme(color-fg-highlight);
     }
 
     .camera {
       span {
-        background: rgba(88, 73, 184, 0.5);
+        background: rgba(35, 42, 46, 0.5);
       }
 
       &::before {
