--- a/src/app/pages/dashboard/solar/solar.component.scss
+++ b/src/app/pages/dashboard/solar/solar.component.scss
@@ -44,7 +44,7 @@
     font-size: 1rem;
   }
 
-  @include nb-for-theme(cosmic) {
+  @include nb-for-theme(dark) {
     color: nb-theme(color-fg-heading);
 
     .value {
