--- a/src/app/pages/dashboard/weather/weather.component.scss
+++ b/src/app/pages/dashboard/weather/weather.component.scss
@@ -53,11 +53,11 @@
         line-height: 10rem;
         color: nb-theme(color-success);
 
-        @include nb-for-theme(cosmic) {
+        @include nb-for-theme(dark) {
           color: nb-theme(color-fg);
-          text-shadow: 0 3px 0 #665ebd,
-          0 4px 10px rgba(33, 7, 77, 0.5),
-          0 2px 10px #928dff;
+          // text-shadow: 0 3px 0 #665ebd,
+          // 0 4px 10px rgba(33, 7, 77, 0.5),
+          // 0 2px 10px #928dff;
         }
       }
     }
