--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -3,7 +3,9 @@
      [class.right]="position === 'inverse'">
   <div class="logo-containter">
     <a (click)="toggleSidebar()" href="#" class="navigation"><i class="nb-menu"></i></a>
-    <div class="logo" (click)="goToHome()">mage-<span>admin</span></div>
+    <div class="logo" (click)="goToHome()">
+     / admin
+    </div>
   </div>
   <ngx-theme-switcher></ngx-theme-switcher>
 </div>
