polised base module, project remote module
Polished how base module behave, created structure for dealing
with importing modules from a remote source.

--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -17,4 +17,16 @@
 
   // loading progress bar
   @include ngx-pace-theme();
+
+  // renderjson styles
+  .renderjson a { text-decoration: none; }
+  .renderjson .disclosure { margin-right: 5px; color: #F92672 !important; }
+  .renderjson .syntax { color: grey; }
+  .renderjson .string { color: #F92672; }
+  .renderjson .number { color: darkcyan; }
+  .renderjson .boolean { color: blueviolet; }
+  .renderjson .key    { color: #A6E22E; }
+  .renderjson .keyword { color: #41958E; }
+  .renderjson .object.syntax { color: #66E9DF; }
+  .renderjson .array.syntax  { color: #fd971f; }
 };
