--- a/src/app/pages/basic/usercommands/usercommands.component.scss
+++ b/src/app/pages/basic/usercommands/usercommands.component.scss
@@ -1,5 +1,110 @@
 @import '../../../@theme/styles/themes';
 
 @include nb-install-component() {
+  .status {
+    overflow: auto;
+    z-index: 5;
+    background-color: rgba(220, 220, 220, 0.75);
+    box-shadow: 0 -8px 10px 0 rgba(6, 7, 8, 0.1);
+    margin-top: 30px;
+    position: fixed;
+    bottom: 0;
+    left: 16.25rem;
+    right: 5px;
+    max-height: 390px;
+    padding: 20px;
 
+    .wide {
+      left: 3.45rem;
+    }
+
+    @include nb-for-theme(dark) {
+      background-color: rgba(6, 7, 8, 0.75);
+      box-shadow: 0 -8px 10px 0 rgba(6, 7, 8, 0.3);
+    }
+
+    ng2-smart-table /deep/ {
+      margin: 20px;
+
+      nav {
+        margin-top: 0.5rem;
+      }
+    }
+  }
+
+  .usercommands {
+    margin-bottom: 400px;
+
+    .submit {
+      text-align: right;
+    }
+  }
+
+  ngb-accordion /deep/ {
+    a {
+      text-shadow: 0 1px 3px rgba(6, 7, 8, 0.3);
+      color: #ffffff;
+    }
+
+    .card {
+      border: 0;
+    }
+
+    .card-header {
+      border: 2px solid #dadfe6;
+      font-family: Exo;
+      font-size: 1.5rem;
+      background-image: linear-gradient(to right, #ff38ac, #ff386a);
+      border: none;
+
+      @include nb-for-theme(dark) {
+        border: 1px solid #2c3539;
+      }
+    }
+
+    .card-body {
+      border: 2px solid #dadfe6;
+      padding: 0;
+
+      @include nb-for-theme(dark) {
+        border: 1px solid #2c3539;
+        background: #1c2225;
+      }
+
+      .card-header {
+        font-family: Roboto;
+        font-size: 1rem;
+        line-height: 0.75rem;
+        border-radius: 0;
+        border: 0;
+        border-bottom: 1px solid #dadfe6;
+        background-image: linear-gradient(to right, #00d9bf, #00d977);
+
+        @include nb-for-theme(dark) {
+          border-bottom: 1px solid #2c3539;
+        }
+      }
+
+      .card-body {
+        padding: 1.25rem;
+
+        .input-group {
+          margin: 0.75rem 0;
+        }
+
+        .response {
+          display: block;
+          margin-top: 20px;
+          border: 3px solid #00d99b;
+          border-radius: 3px;
+          background: #272822;
+          box-shadow: 0 8px 10px 0 rgba(6, 7, 8, 0.3);
+          text-shadow: 0 1px 3px rgba(6, 7, 8, 0.3);
+          padding: 1.25rem 0.75rem 0;
+          max-height: 350px;
+          overflow: auto;
+        }
+      }
+    }
+  }
 }
