--- a/src/app/pages/basic/usercommands/usercommands.component.html
+++ b/src/app/pages/basic/usercommands/usercommands.component.html
@@ -32,13 +32,21 @@
     </ngb-accordion>
   </nb-card-body>
 </nb-card>
-<div class="status">
+<div class="status" [ngClass]="{
+  'open': open
+}">
   <div class="input-group">
+    <i class="toggle" [ngClass]="{
+      'ion-chevron-right': !open,
+      'ion-chevron-down': open
+    }" (click)="toggle()"></i>
     <div class="input-group-addon">Actor ID</div>
     <input name="actorId" type="text" class="form-control" placeholder="Not logged in" [ngModel]="actorId">
     <span class="input-group-btn">
       <button (click)="clear()" class="btn btn-danger">Clear</button>
     </span>
   </div>
-  <ng2-smart-table [settings]="settings" [source]="source"></ng2-smart-table>
+  <div class="container">
+    <ng2-smart-table [settings]="settings" [source]="source"></ng2-smart-table>
+  </div>
 </div>
