--- a/src/app/pages/basic/usercommands/usercommands.component.html
+++ b/src/app/pages/basic/usercommands/usercommands.component.html
@@ -23,7 +23,7 @@
                           <button type="submit" class="btn btn-hero-success">Send</button>
                         </div>
                       </form>
-                      <div renderjson [jsonData]="userCommand.response" *ngIf="userCommand.response" class="response"></div>
+                      <div ngxRenderJson [jsonData]="userCommand.response" *ngIf="userCommand.response" class="response"></div>
                   </ng-template>
                 </ngb-panel>
               </ngb-accordion>
